--- a/style.css
+++ b/style.css
@@ -10,23 +10,32 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
     padding-left: 5%;
 }
 .half-width img{
-    width: 100%;
+    width: 90%;
+    margin-top: 10px;
 }
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient(orange,tomato,red);
+    background-image: linear-gradient(rgb(250, 112, 91), rgb(250, 112, 91), rgb(250, 112, 91));
     padding: 10px 40px;
     border-radius: 5px;
     color: white;
     font-weight: 600;
+    
+    
 }
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
