--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1{
 .half-width{
     width: 50%;
     padding-left: 5%;
+    box-shadow: ;
 }
 .half-width img{
     width: 90%;
@@ -38,4 +39,7 @@ h1{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-item{
+    box-shadow: 10px 10px gray;
 }
