--- a/style.css
+++ b/style.css
@@ -1,61 +1,68 @@
-body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0px;
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0px;
 }
-h1{
- font-size: 50px ;
+h1 {
+  font-size: 50px;
 }
-.nam{
-    color: orange;
+.nam {
+  color: orange;
 }
-.flexible-container{
-    display: flex;
-    margin-bottom: 100px;
+.flexible-container {
+  display: flex;
+  margin-bottom: 100px;
 }
-.half-width{
-    width: 50%;
-    padding-left: 5%;
-    box-shadow: ;
+.half-width {
+  width: 50%;
+  padding-left: 5%;
+  box-shadow: ;
 }
-.half-width img{
-    width: 90%;
-    margin-top: 10px;
+.half-width img {
+  width: 90%;
+  margin-top: 10px;
 }
-.link-button{
-    text-decoration: none;
-    background-image: linear-gradient(rgb(250, 112, 91), rgb(250, 112, 91), rgb(250, 112, 91));
-    padding: 10px 40px;
-    border-radius: 5px;
-    color: white;
-    font-weight: 600;
-    
-    
+.link-button {
+  text-decoration: none;
+  background-image: linear-gradient(
+    rgb(250, 112, 91),
+    rgb(250, 112, 91),
+    rgb(250, 112, 91)
+  );
+  padding: 10px 40px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 600;
 }
-.top-banner{
-    background-image: url(images/top-banner.png);
-    background-repeat: no-repeat;
+.top-banner {
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
 }
-.dream-big{
-    background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
+.dream-big {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
 }
-.experience-area{
-    background-image: url(images/exp-bg.png);
-    background-repeat: no-repeat;
-    background-position: left;
+.experience-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
 }
-.experience-item{
-    width: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 40px gray;
-    border-left: 10px solid orange;
+.experience-item {
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 40px gray;
 }
-#webdexp{
-    border-left: 7px solid;
-    background-image: linear-gradient(blue, cyan);
-    border-image-slice: 1;
+#web-dev{  
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+#full-stack{
+  border-left: 7px solid;
+  border-image: linear-gradient(salmon, tomato);
+  border-image-slice: 1;
+
 }
